# distributed-os

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES_v0.2.md  TEST_REPORT_v0.2.md  dos-config.toml  install_mac_daemon.sh  launch_app.sh  rewrite_dashboard.py  rewrite_dashboard_bw.py  rewrite_dashboard_responsive.py  rustfmt.toml  start_mac.sh  start_pdos_services.sh  test_dashboard.py  test_serde.rs
agents/android/: Cargo.toml  TEST_PLAN.md  gradle.properties  local.properties  settings.gradle.kts
agents/android/app/: build.gradle.kts  proguard-rules.pro
agents/android/app/src/main/: AndroidManifest.xml
agents/android/app/src/main/java/com/dos/agent/: Anim.kt  AnimatedCounter.kt  BootReceiver.kt  CameraProvider.kt  Core.kt  DeviceDiscoveryManager.kt  DeviceListTileAdapter.kt  DeviceNameResolver.kt  FileTransferManager.kt  MainActivity.kt  MicroInteractions.kt  NativeTransferEngine.kt  NetworkMonitor.kt  NetworkUtil.kt  NioTransfer.kt  NodeService.kt  OnboardingActivity.kt  PdosApplication.kt  PdosTileService.kt  PeerItem.kt  PeerListAdapter.kt  PlatformMapper.kt  ProgressPageActivity.kt  RadarConfig.kt  RadarScannerView.kt  ScanQrActivity.kt  ScreenMirrorProvider.kt  SealedTransferStatus.kt  SettingsManager.kt  SignatureAnimations.kt  StatusBanner.kt  TransferHistoryAdapter.kt  TransferListAdapter.kt  TunnelClient.kt  VisualIdentity.kt
agents/android/app/src/main/res/drawable/: bg_circle.xml  bg_gradient_1.xml  bg_gradient_2.xml  bg_gradient_3.xml  bg_gradient_animated.xml  bg_input.xml  bg_peer_card.xml  bg_shimmer.xml  ic_apps.xml  ic_arrow_down.xml  ic_camera.xml  ic_check.xml  ic_clipboard.xml  ic_close.xml  ic_device_desktop.xml  ic_device_laptop.xml  ic_device_phone.xml  ic_empty_receive.xml  ic_file_generic.xml  ic_files.xml  ic_history.xml  ic_launcher_foreground.xml  ic_logo.xml  ic_mirror.xml  ic_monitor.xml  ic_notification.xml  ic_photos.xml  ic_receive.xml  ic_search.xml  ic_send.xml  ic_send_fab.xml  ic_settings.xml  ic_sync.xml  ic_terminal.xml  ic_text.xml  ic_wifi.xml  illustration_empty.xml  progress_gradient.xml  pulse_bg.xml  radar_ring.xml  (+6 more)
agents/android/app/src/main/res/layout/: activity_main.xml  activity_onboarding.xml  activity_progress.xml  activity_scan_qr.xml  bottom_sheet_settings.xml  history_item.xml  item_big_button.xml  item_device_list_tile.xml  item_peer_device.xml  page_onboarding.xml  status_banner.xml  transfer_item.xml
agents/android/app/src/main/res/menu/: bottom_nav_menu.xml
agents/android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
agents/android/app/src/main/res/xml/: pdos_tile.xml
agents/android/src/: file_server.rs  lib.rs
agents/android/src/providers/: clipboard.rs  file.rs  notifications.rs  terminal.rs
agents/android/tests/: file_server_test.rs
agents/desktop/: Cargo.toml
agents/desktop-ui/: Cargo.toml
agents/desktop-ui/src/: discovery.rs  file_transfer.rs  main.rs  mirror.rs  p2p_client.rs
agents/desktop/src/: agent.rs  main.rs
agents/desktop/src/providers/: clipboard.rs  file.rs  mod.rs  notifications.rs  terminal.rs
cli/: Cargo.toml
cli/src/: clipboard.rs  dashboard.rs  file.rs  http_transfer.rs  main.rs  mode_switcher.rs  net.rs  notify.rs  observability.rs  p2p.rs  pair.rs  pairing.rs  ping.rs  quic_transport.rs  resumption.rs  search.rs  syscall_profiler.rs  system_monitor.rs  telemetry.rs  terminal.rs  test_telemetry.rs  transfer_engine_adapter.rs  transfer_engine_integration.rs  transfer_mode.rs  transfer_monitor.rs  transport.rs  transport_switcher.rs  tunnel.rs  udp_transport.rs  zero_copy.rs
cli/src/adaptive/: auto_tuner.rs  classifier.rs  decision_engine.rs  feedback_loop.rs  mod.rs
cli/src/tls/: mod.rs
cli/src/transfer_engine/: buffer.rs  capabilities.rs  file_analyzer.rs  learning.rs  mod.rs  monitor.rs  network.rs  profile.rs  recovery.rs  scheduler.rs  strategy.rs  stream.rs  system.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  constants.rs  error.rs  lib.rs  time.rs
crates/core/: Cargo.toml
crates/core/src/: capability.rs  error.rs  lib.rs  node.rs  status.rs  task.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  identity.rs  lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: error.rs  lib.rs  mdns.rs  method.rs  udp.rs
crates/heartbeat/: Cargo.toml
crates/heartbeat/src/: error.rs  lib.rs  sampler.rs  service.rs
crates/networking/: Cargo.toml
crates/networking/src/: connection.rs  error.rs  lib.rs  ws_connection.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: builder.rs  codec.rs  envelope.rs  error.rs  ids.rs  lib.rs  message.rs  pair_code.rs  validation.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: engine.rs  error.rs  lib.rs  query.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  error.rs  lib.rs  repository.rs
crates/storage/src/sqlite/: mod.rs  node_repo.rs  settings_repo.rs  task_repo.rs
crates/task_manager/: Cargo.toml
crates/task_manager/src/: clipboard.rs  dispatcher.rs  error.rs  file.rs  lib.rs  notifications.rs  ping.rs  queue.rs  registry.rs  task.rs  terminal.rs
crates/task_manager/src/providers/: clipboard.rs  file.rs  mod.rs  notifications.rs  terminal.rs
crates/transfer_engine/: Cargo.toml
crates/transfer_engine/src/: adaptive.rs  discovery.rs  error.rs  handshake.rs  http.rs  identity.rs  keepalive.rs  lib.rs  nat.rs  pairing.rs  peer.rs  relay.rs  reliable.rs  resume.rs  session.rs  streaming.rs  window.rs
crates/transfer_engine/src/control/: classifier.rs  decision.rs  loop.rs  metrics.rs  mod.rs
crates/transfer_engine/src/transport/: core.rs  mod.rs  quic.rs  selection.rs  tls.rs  tofu.rs
platform/android/: Cargo.toml
platform/android/src/: lib.rs  sampler.rs
platform/linux/: Cargo.toml
platform/linux/src/: lib.rs  sampler.rs
platform/mac/: Cargo.toml
platform/mac/src/: lib.rs  sampler.rs
platform/windows/: Cargo.toml
platform/windows/src/: lib.rs  sampler.rs
relay/: Cargo.toml
relay/src/: handler.rs  main.rs  registry.rs
(+71 files in other folders)
