[package]
name = "dos-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI management tool for the Personal Distributed OS"

[[bin]]
name = "dos"
path = "src/main.rs"

[dependencies]
dos-core     = { workspace = true }
dos-protocol = { workspace = true }
dos-crypto   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow       = { workspace = true }
dos-networking = { workspace = true }
dos-common   = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid         = { workspace = true }
serde_json   = { workspace = true }
serde        = { workspace = true }
chrono.workspace = true
dos-task-manager = { version = "0.1.0", path = "../crates/task_manager" }
dos-transfer-engine = { path = "../crates/transfer_engine" }
async-trait = "0.1.89"
base64 = "0.22.1"
mdns-sd = "0.20.0"
rustls = "0.23.41"
tokio-rustls = "0.26.4"
rcgen = "0.14.7"
rustls-pemfile = "2.2.0"
sha2 = "0.10.9"
sysinfo = "0.36.1"
lazy_static = "1.5.0"
dirs = "6.0.0"
rand.workspace = true
flate2 = "1.1.9"
zip = "2"
whoami = "2.1.2"
num_cpus = "1"
memmap2 = "0.9.11"
libc = "0.2"
core_affinity = "0.8"

[dev-dependencies]
dos-android = { path = "../agents/android" }
tempfile = "3"


