[package]
name = "dos-android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Android agent JNI cdylib wrapper"

[lib]
crate-type = ["cdylib", "rlib"]
name = "dos_android"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"

[dependencies]
dos-common       = { workspace = true }
dos-core         = { workspace = true }
dos-crypto       = { workspace = true }
dos-storage      = { workspace = true }
dos-runtime      = { workspace = true }
dos-platform-android = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true }
log              = "0.4"
android_logger   = "0.14"
anyhow           = { workspace = true }
serde_json       = { workspace = true }
hex              = { workspace = true }
jni              = "0.21"
lazy_static      = "1.4.0"
rand             = { workspace = true }
dos-task-manager = { version = "0.1.0", path = "../../crates/task_manager" }
async-trait = "0.1.89"
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
urlencoding = "2.1.3"
libc = "0.2"
android_log-sys = "0.3"

