[package]
name = "dos-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Desktop agent binary — runs on macOS, Windows, and Linux"

[[bin]]
name = "dos-desktop"
path = "src/main.rs"

[dependencies]
dos-common       = { workspace = true }
dos-core         = { workspace = true }
dos-crypto       = { workspace = true }
dos-storage      = { workspace = true }
dos-runtime      = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow           = { workspace = true }
hex              = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
dos-platform-mac = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
dos-platform-windows = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
dos-platform-linux = { workspace = true }
