[package]
name = "dos-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared utilities: constants, config loading, time helpers, error foundation"

[dependencies]
serde     = { workspace = true }
toml      = { workspace = true }
thiserror = { workspace = true }
chrono    = { workspace = true }
tracing   = { workspace = true }
