[package]
name = "dos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core domain models: Node, Capability, Platform, Status"

[dependencies]
serde    = { workspace = true }
uuid     = { workspace = true }
chrono   = { workspace = true }
thiserror = { workspace = true }
