[package]
name = "dos-discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Device discovery: mDNS, relay, and manual pair-code"

[dependencies]
dos-core       = { workspace = true }
dos-protocol   = { workspace = true }
dos-networking = { workspace = true }
dos-crypto     = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
thiserror      = { workspace = true }
async-trait    = "0.1"
anyhow         = { workspace = true }
mdns-sd        = "0.13"
uuid           = { workspace = true, features = ["v4"] }
