[package]
name = "dos-networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WebSocket transport abstractions"

[dependencies]
dos-core     = { workspace = true }
dos-protocol = { workspace = true }
dos-crypto   = { workspace = true }
tokio        = { workspace = true }
tokio-tungstenite = { workspace = true }
serde_json   = { workspace = true }
futures-util = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
async-trait  = "0.1"
