[package]
name = "dos-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core node runtime engine for PDOS agents"

[dependencies]
dos-common       = { workspace = true }
dos-core         = { workspace = true }
dos-protocol     = { workspace = true }
dos-networking   = { workspace = true }
dos-task-manager = { workspace = true }
dos-crypto       = { workspace = true }
dos-discovery    = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
anyhow           = { workspace = true }
futures-util     = { workspace = true }
tokio-tungstenite = { workspace = true }
chrono           = { workspace = true }
serde_json       = { workspace = true }
serde            = { version = "1.0", features = ["derive"] }
