[package]
name = "dos-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Universal search: device lookup, filtering, and ranking"

[dependencies]
dos-core    = { workspace = true }
dos-storage = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
