[package]
name = "dos-task-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Universal task abstraction: trait, queue, and dispatcher"

[dependencies]
dos-core     = { workspace = true }
dos-protocol = { workspace = true }
dos-storage  = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
async-trait  = "0.1"
serde = { workspace = true, features = ["derive"] }
base64 = "0.22.1"
flate2 = "1.1.9"

